# CodeCache

./: CHANGELOG.md  Cargo.toml  README.md  USAGE.md
.claude/: CLAUDE.md
.claude/agents/: research-harness-engineer.md
.claude/briefs/: BRIEF-M10-D20-batch-inserts.md  BRIEF-M5-indexer.md  BRIEF-M6.4-latency-bench.md  BRIEF-M7-formatter-cli.md  BRIEF-M9-typescript-go.md  BRIEF-R1-harness.md  BRIEF-R2-offline-ablations.md  BRIEF-R2.3a-chunk-ingestion-seam.md  BRIEF-R2.7-contextbench-exit-run.md
benches/: CLAUDE.md  indexing.rs  query_bench.rs
docs/: ENGINEERING_PLAN.md  ROADMAP.md  TESTING_AND_USAGE.md  TEST_STRATEGY.md  TODO.md  project_plan.md
research/: CLAUDE.md
research/r1_harness/: .gitignore  README.md  pyproject.toml  requirements.txt  run_contextbench_exit.py
research/r1_harness/r1harness/: __init__.py  arms.py  codecache_tool.py  contextbench_corpus.py  corpus.py  scorer.py  trajectory.py
research/r1_harness/tasks/: auth_q1.json
research/r1_harness/tests/: conftest.py  test_codecache_tool.py  test_contextbench_corpus.py  test_corpus.py  test_scorer.py  test_trajectory.py
src/: CLAUDE.md  app.rs  lib.rs
src/chunker/: mod.rs
src/cli/: CLAUDE.md  config.rs  index.rs  ingest.rs  init.rs  mod.rs  paths.rs  query.rs  serve.rs  status.rs  update.rs
src/config/: CLAUDE.md  mod.rs
src/indexer/: CLAUDE.md  mod.rs  pipeline.rs
src/parser/: CLAUDE.md  go.rs  mod.rs
src/parser/queries/: go.scm
src/retriever/: CLAUDE.md
src/storage/: CLAUDE.md  mod.rs
tests/: CLAUDE.md  cli_tests.rs  e2e_index.rs  e2e_ingest.rs  e2e_ingest_lib.rs  indexer_tests.rs  parser_go_tests.rs  parser_tests.rs  storage_tests.rs
tests/fixtures/go/: high_error.go  method_with_receiver.go  package_and_imports.go  top_level_function.go
